# ci-cd-hub-fixtures

./: .ci-hub.yml  .gitignore  README.md
.github/workflows/: hub-ci.yml  hub-java-ci.yml  hub-python-ci.yml  java-ci-dispatch.yml  python-ci-dispatch.yml
java-failing/: pom.xml
java-gradle-fail/: build.gradle  settings.gradle
java-gradle-pass/: build.gradle  settings.gradle
java-multi-module/: pom.xml
java-multi-module/api/: pom.xml
java-multi-module/core/: pom.xml
java-passing/: .trigger  pom.xml
java-with-docker/: .trigger  Dockerfile  pom.xml
monorepo-fail/java/: pom.xml
monorepo-fail/python/: pyproject.toml
monorepo-pass/java/: pom.xml
monorepo-pass/python/: pyproject.toml
python-failing/: pyproject.toml  requirements.txt
python-failing/python_failing/: mathops.py
python-failing/tests/: test_mathops.py
python-passing/: .trigger  pyproject.toml  requirements.txt
python-passing/python_passing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-passing/tests/: test_mathops.py
python-setup-fail/: setup.py
python-setup-fail/buggylib/: __init__.py
python-setup-fail/tests/: test_buggy.py
python-setup-pass/: setup.py
python-setup-pass/mysetuplib/: __init__.py
python-setup-pass/tests/: test_lib.py
python-src-layout/: pyproject.toml
python-src-layout/tests/: test_srclayout.py
python-with-docker/: Dockerfile  pyproject.toml
python-with-docker/.hypothesis/constants/: adc83b19e793491b  dde69f3c12856bcb
python-with-docker/python_docker/: mathops.py
python-with-docker/tests/: test_mathops.py
(+24 files in other folders)
