[project]
name = "python-failing"
version = "0.1.0"
description = "Failing fixture for CI/CD hub - intentionally has issues"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
